--- a/src/main/resources/assets/bio/lang/en_us.lang
+++ b/src/main/resources/assets/bio/lang/en_us.lang
@@ -1,6 +1,6 @@
 itemGroup.Bio=Bio System
 tile.controller_1.name=Controller 1
-tile.relay.name=Relay
+tile.relay_1.name=Relay 1
 tile.bumps.name=Bumps
 tile.nerve_cable.name=Nerve Cable
 tile.midtorso_nerve_cable.name=MidTorso Nerve Cable
